# mesh_viewer

./: CMakeLists.txt  LICENSE  README.md  Shader.cpp  Shader.h  imgui.ini  main.cpp
res/shaders/: fragment_shader  vertex_shader
